--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,11 @@
 {
   "name": "DescobreixLaVall",
   "app_id": "",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/descobreix",
+      "proxyUrl": "http://127.0.0.1:8000/descobreix"
+    }
+  ]
 }
