--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,11 +1,5 @@
 {
   "name": "DescobreixLaVall",
   "app_id": "",
-  "type": "ionic-angular",
-  "proxies": [
-    {
-      "path": "/descobreix",
-      "proxyUrl": "http://127.0.0.1/descobreix"
-    }
-  ]
+  "type": "ionic-angular"
 }
