--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
         "@angular/platform-browser": "4.1.2",
         "@angular/platform-browser-dynamic": "4.1.2",
         "@ionic-native/core": "3.10.2",
+        "@ionic-native/file": "^3.13.0",
         "@ionic-native/geolocation": "^3.12.1",
         "@ionic-native/splash-screen": "3.10.2",
         "@ionic-native/status-bar": "3.10.2",
+        "@ionic-native/transfer": "^3.13.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-geolocation": "^2.4.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.3.0",
+        "ionic-image-loader": "^3.2.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "ngx-pipes": "^1.6.1",
@@ -56,7 +60,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-file": {}
         },
         "platforms": [
             "android"
